test/types/range/hilde/rangeSliceStatic.good
rangeSliceStatic.chpl:8: error: unresolved access of 'int(64)' by '(range(int(64),boundedLow,false))'
